# Accepted

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  a
assets/: default_config.toml
benches/: lib.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: main.rs
src/: buffer.rs  buffer_mode.rs  buffer_screen.rs  buffer_tab.rs  clipboard.rs  compiler.rs  config.rs  core.rs  cursor.rs  draw.rs  draw_cache.rs  env.rs  formatter.rs  indent.rs  job_queue.rs  language_specific.rs  lib.rs  lsp.rs  lsp_async.rs  main.rs  mode.rs  parenthesis.rs  rmate.rs  ropey_util.rs  rustc.rs  rustfmt.rs  storage.rs  syntax.rs  tabnine.rs  tabnine_async.rs  text_object.rs  theme.rs
src/config/: mod.rs  snippet.rs  types.rs
src/core/: buffer.rs  mod.rs  operation.rs
src/core/buffer/: ropey_core_buffer.rs
src/draw/: char_style.rs  cursor.rs  mod.rs
src/lsp/: mod.rs
src/mode/: fuzzy.rs  mod.rs
src/rmate/: mod.rs
tests/: lib.rs
