[package]
name = "accepted"
version = "0.1.9"
authors = ["hatoo <hato2000@gmail.com>"]
description = "A text editor to be ACCEPTED."
repository = "https://github.com/hatoo/Accepted"
readme = "README.md"
keywords = ["text", "editor", "terminal", "modal", "competitive"]
categories = ["text-editors"]
license = "MIT"

[[bin]]
name = "acc"
path = "src/main.rs"

[dependencies]
termion = "1.5"
unicode-width = "0.1"
clap = "2.3"
syntect = "2.1"
shellexpand = "1.0"
dirs = "1"
config = "0.9"
serde = "1"
serde_json = "1"
serde_derive = "1"
racer = "2"
jsonrpc-core = "8"
languageserver-types = "0"