[package]
name = "accepted"
version = "0.2.1"
authors = ["hatoo <hato2000@gmail.com>"]
description = "A text editor to be ACCEPTED."
repository = "https://github.com/hatoo/Accepted"
readme = "README.md"
keywords = ["text", "editor", "terminal", "modal", "competitive"]
categories = ["text-editors"]
license = "MIT"
edition = "2018"

[[bin]]
name = "acc"
path = "src/main.rs"

[dependencies]
termion = "1.5"
unicode-width = "0.1"
clap = "2.3"
syntect = "3"
shellexpand = "1.0"
dirs = "1"
serde = "1"
serde_json = "1"
serde_derive = "1"
jsonrpc-core = "10"
languageserver-types = "0"
regex = "1"
ropey = "1"
aho-corasick = "0.6"
iter-read = "0"
rbtag = "0.3"
failure = "0.1"
toml = "0.4"
ansi_colours = "1"
typemap = "0.3"
fuzzy-matcher = "0.2"
rayon = "1"
